--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,12 +4,12 @@ plugins {
 }
 
 android {
-    namespace 'com.example.delta'
+    namespace 'com.example.myapplication'
     compileSdk 32
 
     defaultConfig {
-        applicationId "com.example.delta"
-        minSdk 21
+        applicationId "com.example.myapplication"
+        minSdk 26
         targetSdk 32
         versionCode 1
         versionName "1.0"
