--- a/app/build.gradle
+++ b/app/build.gradle
@@ -10,7 +10,7 @@ android {
     defaultConfig {
         applicationId "com.example.myapplication"
         minSdk 26
-        targetSdk 32
+        targetSdk 33
         versionCode 1
         versionName "1.0"
 
@@ -47,6 +47,7 @@ android {
 }
 
 dependencies {
+    implementation "androidx.compose.material3:material3-window-size-class:$material3_version"
     implementation "com.google.accompanist:accompanist-systemuicontroller:0.27.0"
     implementation 'androidx.core:core-ktx:1.7.0'
     implementation 'androidx.lifecycle:lifecycle-runtime-ktx:2.3.1'
