--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 03 21:45:24 ART 2022
-sdk.dir=C\:\\Users\\marti\\AppData\\Local\\Android\\Sdk
+#Tue Nov 08 14:31:51 ART 2022
+sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
