--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Oct 26 16:48:41 ART 2022
-sdk.dir=C\:\\Users\\lauti\\AppData\\Local\\Android\\Sdk
+#Wed Nov 09 10:00:36 ART 2022
+sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
