--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,5 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed Nov 09 12:00:25 ART 2022
-sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
+sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
+
