--- a/local.properties
+++ b/local.properties
@@ -4,6 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 09 12:00:25 ART 2022
-sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
-
+#Thu Nov 10 12:53:15 ART 2022
+sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
