--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 10 15:47:34 ART 2022
-sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
+#Thu Nov 10 16:41:49 ART 2022
+sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
