--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 10 18:47:30 ART 2022
-sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
+#Fri Nov 11 11:24:46 ART 2022
+sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
