--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 11 11:24:46 ART 2022
-sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
+#Wed Nov 09 16:31:38 ART 2022
+sdk.dir=C\:\\Users\\marti\\AppData\\Local\\Android\\Sdk
