--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 09 16:31:38 ART 2022
-sdk.dir=C\:\\Users\\marti\\AppData\\Local\\Android\\Sdk
+#Fri Nov 11 20:07:43 ART 2022
+sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
