--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sat Nov 12 14:20:32 ART 2022
-sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
+#Sat Nov 12 18:01:48 ART 2022
+sdk.dir=C\:\\Users\\lauti\\AppData\\Local\\Android\\Sdk
