--- a/app/build.gradle
+++ b/app/build.gradle
@@ -61,6 +61,8 @@ android {
 }
 
 dependencies {
+
+    implementation "com.google.accompanist:accompanist-swiperefresh:0.27.0"
     implementation 'com.google.code.gson:gson:2.10'
     implementation "com.squareup.retrofit2:converter-gson:$retrofit_version"
     implementation "com.squareup.retrofit2:retrofit:$retrofit_version"
