--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 13 09:45:23 ART 2022
-sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
+#Sat Nov 12 20:36:36 ART 2022
+sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
