--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
-
+    <uses-permission android:name="android.permission.INTERNET"/>
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -9,9 +9,12 @@
         android:icon="@drawable/delta_logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/delta_logo"
+        android:name=".MyApplication"
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
+        android:networkSecurityConfig="@xml/network_security_config"
         tools:targetApi="31">
+        
         <activity
             android:name=".ui.activities.thirdactivity.ThirdActivity"
             android:exported="false"
