--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 14 15:12:10 ART 2022
-sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
+#Mon Nov 14 20:41:07 ART 2022
+sdk.dir=C\:\\Users\\marti\\AppData\\Local\\Android\\Sdk
