--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Sun Nov 13 23:47:40 ART 2022
-sdk.dir=C\:\\Users\\marti\\AppData\\Local\\Android\\Sdk
+#Mon Nov 14 17:34:01 ART 2022
+sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
