--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Mon Nov 14 17:34:01 ART 2022
-sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
+#Tue Nov 15 08:14:56 ART 2022
+sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
