--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,8 +13,8 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         android:networkSecurityConfig="@xml/network_security_config"
-        tools:targetApi="31">
-        
+        tools:targetApi="tiramisu"
+        >
         <activity
             android:name=".ui.activities.thirdactivity.ThirdActivity"
             android:exported="false"
