--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 16 16:21:34 ART 2022
-sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
+#Wed Nov 16 18:51:50 ART 2022
+sdk.dir=C\:\\Users\\lauti\\AppData\\Local\\Android\\Sdk
