--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 16 16:54:59 ART 2022
-sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
+#Wed Nov 16 21:05:17 ART 2022
+=\=\=\=\=\=\=
+sdk.dir=C\:\\Users\\lauti\\AppData\\Local\\Android\\Sdk
+>>>>>>>=origin/main
+<<<<<<<=HEAD
