--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Nov 16 21:05:17 ART 2022
+#Wed Nov 16 23:47:23 ART 2022
 =\=\=\=\=\=\=
-sdk.dir=C\:\\Users\\lauti\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
 >>>>>>>=origin/main
 <<<<<<<=HEAD
