--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,18 +26,10 @@
         </activity>
         <activity
             android:name=".ui.activities.secondactivity.SecondActivity"
-            android:exported="true"
+            android:exported="false"
             android:label="@string/title_activity_main2"
             android:theme="@style/Theme.MyApplication">
-            <intent-filter>
-                <category android:name="android.intent.category.BROWSABLE" />
-                <action android:name="android.intent.action.VIEW" />
-                <category android:name="android.intent.category.DEFAULT" />
 
-                <data
-                    android:scheme="http"
-                    android:host="deltapp.com" />
-            </intent-filter>
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -51,7 +43,15 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+            <intent-filter>
+                <category android:name="android.intent.category.BROWSABLE" />
+                <action android:name="android.intent.action.VIEW" />
+                <category android:name="android.intent.category.DEFAULT" />
 
+                <data
+                    android:scheme="http"
+                    android:host="deltapp.com" />
+            </intent-filter>
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
