--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Nov 17 18:41:03 ART 2022
+#Thu Nov 17 19:51:46 ART 2022
 =\=\=\=\=\=\=
-sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
+sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
 >>>>>>>=origin/main
 <<<<<<<=HEAD
