logIn works and navigation

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,6 +28,7 @@
             android:name=".ui.activities.secondactivity.SecondActivity"
             android:exported="false"
             android:label="@string/title_activity_main2"
+            android:launchMode="singleInstance"
             android:theme="@style/Theme.MyApplication">
 
             <meta-data
