better activity management

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,9 @@
             android:name=".ui.activities.secondactivity.SecondActivity"
             android:exported="false"
             android:label="@string/title_activity_main2"
-            android:theme="@style/Theme.MyApplication">
+            android:theme="@style/Theme.MyApplication"
+            android:launchMode="singleInstance"
+            >
 
             <meta-data
                 android:name="android.app.lib_name"
