--- a/local.properties
+++ b/local.properties
@@ -4,8 +4,8 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Fri Nov 18 14:23:06 ART 2022
+#Fri Nov 18 15:31:23 ART 2022
 =\=\=\=\=\=\=
-sdk.dir=/Users/marcoscilipoti/Library/Android/sdk
+sdk.dir=C\:\\Users\\lautarohernando\\AppData\\Local\\Android\\Sdk
 >>>>>>>=origin/main
 <<<<<<<=HEAD
